  * Add support for readline's backward-kill-word and kill-word at gdb prompt

cgdb-0.7.0 (03/21/2017)

  * Remove help2man dependency. CGDB has a good info page which
    should suffice.

  * The hlsearch option has been added to CGDB. This improves the
    searching and displaying of searching functionality within CGDB.
    By default the option is off. When enabled, and there exists a
    previous search, CGDB will display the search results using
    the Search highlighting group. The IncSearch highlighting group
    is used to display the active search. The hlsearch option
    highlights previous searches in the source window, the gdb window
    when in scroll mode and the file dialog window.

  * CGDB now supports showing assembly code! By default, CGDB will
    display source code when it is available and assembly code
    when no source code is available. The option 'set disasm'
    allows you to show mixed source/assembly when both are available.

  * Add support to enable/disable showing assembly code in CGDB.
    The default is disabled. The 'set disasm' enables showing 
    mixed assembly mode by default. See the documentation for more
    information.

  * Add the :logo command to cgdb. This tells CGDB to display a logo
    in the source window.

  * Add an initial Rust syntax highlighter.

  * Support vi type <digit>j and <digit>k motions. Previously only
    typing j or k with out a number was supported.

  * Add support for marks. m[a-z] will set a local file mark and
    m[A-Z] will set a global mark. '[a-z] will jump to the
    corresponding local mark and '[A-Z] will jump to the corresponding
    global mark. As an added bonus '' will jump to the last jump location
    and '. will jump to the last executing line.
    The showmarks option was introduced to show the marks in the source
    window. It defaults to true. You can disable the viewing of marks
    using 'set noshowmarks'.

  * Add support to enable or disable color in the source window.